fix:изменить размер gap

--- a/src/blocks/information/information.css
+++ b/src/blocks/information/information.css
@@ -4,7 +4,7 @@
     border-radius: 8px;
     box-sizing: border-box;
     display: flex;
-    gap: 21px;
+    gap: 16px;
     justify-content: space-between;
     padding: 16px;
     width: 100%;
